tests/snapshots/golden_snapshot_tests__golden_event_run_started.snap
---
source: tests/golden_snapshot_tests.rs
expression: e
---
{
  "ts": "2025-01-15T12:00:00Z",
  "type": "run_started",
  "message": "Beginning task execution"
}
