tests/snapshots/golden_snapshot_tests__golden_event_tool_call.snap
---
source: tests/golden_snapshot_tests.rs
expression: e
---
{
  "ts": "2025-01-15T12:00:00Z",
  "type": "tool_call",
  "tool_name": "Read",
  "tool_use_id": "tu_001",
  "parent_tool_use_id": null,
  "input": {
    "path": "src/auth.rs"
  }
}
