tests/snapshots/golden_snapshot_tests__golden_event_tool_call_nested.snap
---
source: tests/golden_snapshot_tests.rs
expression: e
---
{
  "ts": "2025-01-15T12:00:00Z",
  "type": "tool_call",
  "tool_name": "Bash",
  "tool_use_id": "tu_002",
  "parent_tool_use_id": "tu_001",
  "input": {
    "command": "cargo test"
  }
}
