tests/snapshots/golden_snapshot_tests__golden_event_tool_result_success.snap
---
source: tests/golden_snapshot_tests.rs
expression: e
---
{
  "ts": "2025-01-15T12:00:00Z",
  "type": "tool_result",
  "tool_name": "Read",
  "tool_use_id": "tu_001",
  "output": {
    "content": "fn main() {}"
  },
  "is_error": false
}
