tests/snapshots/golden_snapshot_tests__golden_execution_lane_patch_first.snap
---
source: tests/golden_snapshot_tests.rs
expression: "ExecutionLane::PatchFirst"
---
"patch_first"
