tests/snapshots/golden_snapshot_tests__golden_execution_lane_workspace_first.snap
---
source: tests/golden_snapshot_tests.rs
expression: "ExecutionLane::WorkspaceFirst"
---
"workspace_first"
