tests/snapshots/golden_snapshot_tests__golden_execution_mode_passthrough.snap
---
source: tests/golden_snapshot_tests.rs
expression: "ExecutionMode::Passthrough"
---
"passthrough"
